--- a/createuser.html
+++ b/createuser.html
@@ -18,16 +18,16 @@ search_exclude: true
     }
 
     form {
-        background-color: #fff;
+        background-color: #000000;
         padding: 20px;
         border-radius: 5px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 0 10px rgba(0, 0, 255, 0.1);
     }
 
     label {
         display: block;
         margin-bottom: 10px;
-        color: #000; 
+        color: #0004ff; 
     }
 
     input[type="text"],
@@ -36,7 +36,7 @@ search_exclude: true
         width: 100%;
         padding: 10px;
         margin-bottom: 10px;
-        border: 1px solid #ccc;
+        border: 1px solid #0800ff;
         border-radius: 5px;
         box-sizing: border-box;
         color: #000; 
@@ -44,7 +44,7 @@ search_exclude: true
 
     input[type="text"],
     input[type="password"] {
-        background-color: #ccc; 
+        background-color: #cccccc; 
     }
 
     button {
@@ -55,7 +55,7 @@ search_exclude: true
     }
 
     button:hover {
-        box-shadow: 0 0 15px rgb(0, 86, 179);
+        box-shadow: 0 0 15px rgb(0, 255, 38);
     }
 
 </style>
